# casdapy

./: Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
casdapy/: __init__.py  _logging.py  casda.py  casda_csiro_tools.py  casdapy.py  cli.py  download.py  download_cli.py  images.py  logger.py  logger_config.json  logging.py  query.py  test_function.py  test_query.py  utils.py
casdapy/scripts/: download.py  logger_config.json
