[tool.poetry]
name = "casdapy"
version = "0.3.2"
description = "Query and download images and catalogues from the CSIRO ASKAP Science Data Archive (CASDA)."
authors = ["Andrew O'Brien <obrienan@uwm.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
astropy = "^4.2"
astroquery = "^0.4.1"
click = "^7.1.2"
PyPika = "^0.47.4"
retrying = "^1.3.3"
tqdm = "^4.57.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.800"
flake8 = "^3.8.4"
rope = "^0.18.0"
ipykernel = "^6.0.3"

[tool.poetry.scripts]
casdapy = "casdapy.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
